// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a Button with merged attributes 1`] = `
<button
  aria-disabled={false}
  className="button neutral TestClass"
  data-mock="data"
  disabled={false}
  style={
    Object {
      "height": "100px",
    }
  }
  type="button"
/>
`;

exports[`should render a button with type equal to button 1`] = `
<button
  aria-disabled={false}
  className="button neutral"
  disabled={false}
  type="button"
/>
`;

exports[`should render a button with type equal to reset 1`] = `
<button
  aria-disabled={false}
  className="button neutral"
  disabled={false}
  type="reset"
/>
`;

exports[`should render a button with type equal to submit 1`] = `
<button
  aria-disabled={false}
  className="button neutral"
  disabled={false}
  type="submit"
/>
`;

exports[`should render a de-emphasis button 1`] = `
<button
  aria-disabled={false}
  className="button de-emphasis"
  disabled={false}
  type="button"
/>
`;

exports[`should render a emphasis button 1`] = `
<button
  aria-disabled={false}
  className="button emphasis"
  disabled={false}
  type="button"
/>
`;

exports[`should render a neutral button 1`] = `
<button
  aria-disabled={false}
  className="button neutral"
  disabled={false}
  type="button"
/>
`;

exports[`should render an icon 1`] = `
<button
  aria-disabled={false}
  className="button neutral tiny"
  disabled={false}
  type="button"
>
  <img
    alt="icon"
  />
</button>
`;

exports[`should render an icon and a text 1`] = `
<button
  aria-disabled={false}
  className="button neutral tiny"
  disabled={false}
  type="button"
>
  <img
    alt="icon"
  />
  <span
    className="text"
  >
    text
  </span>
</button>
`;

exports[`should render as an anchor when provided an href 1`] = `
<a
  aria-disabled={false}
  className="button neutral"
  disabled={false}
  href="MockHref"
  type="button"
>
  <span
    className="text"
  >
    href
  </span>
</a>
`;

exports[`should render as disabled when set 1`] = `
<button
  aria-disabled={true}
  className="button neutral is-disabled"
  disabled={true}
  tabIndex="-1"
  type="button"
>
  <span
    className="text"
  >
    Disabled
  </span>
</button>
`;

exports[`should render text then an icon when reversed 1`] = `
<button
  aria-disabled={false}
  className="button neutral tiny"
  disabled={false}
  type="button"
>
  <span
    className="text"
  >
    text
  </span>
  <img
    alt="icon"
  />
</button>
`;
